--- a/entregas/src/views/layouts/main.handlebars
+++ b/entregas/src/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handlebars</title>
+    <title>Curso Backend Parte I</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
