feature: creada 'realTimeProducts' y comenzada su configuracion con el servidor

--- a/entregas/public/css/style.css
+++ b/entregas/public/css/style.css
@@ -1,3 +1,14 @@
 .productImage{
     height: 300px;
 }
+
+#addProductsForm{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    gap: 5px;
+}
+
+#productsCardsContainer{
+    display: flex;
+}
