--- a/entregas/src/views/home.handlebars
+++ b/entregas/src/views/home.handlebars
@@ -1,15 +1,19 @@
 <div>
-    <h1>Lista de productos</h1>
+    <h1 class="display-1">Lista de productos</h1>
 
-    {{#each products}}
-        <div class="productCard">
-            <li>
-                <img src={{this.thumbnails}} alt="imagen producto" class="productImage">
-                <h2>{{this.title}}</h2>
-                <h3>Precio: ${{this.price}}</h3>
-            </li>
-        </div>
-    {{/each}}
+    <div id="productsCardsContainer">
+            <div id="products-list-wrapper">
+                {{#each products}}
+                <div class="card">
+                    <li>
+                        <img src={{this.thumbnails}} alt="imagen producto" class="productImage">
+                        <h2 class="display-3">{{this.title}}</h2>
+                        <h3 class="display-4">Precio: ${{this.price}}</h3>
+                    </li>
+                </div>
+                {{/each}}
+            </div>
+    </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
