--- a/entrega_final/src/views/index.handlebars
+++ b/entrega_final/src/views/index.handlebars
@@ -1,3 +1,17 @@
 <div>
-    <h1>HOLA MUNDO</h1>
+    <h1 class="display-1">Lista de productos</h1>
+
+    <div id="productsCardsContainer">
+            <div id="products-list-wrapper">
+                {{#each products}}
+                <div class="card">
+                    <li>
+                        <img src={{this.thumbnails}} alt="imagen producto" class="productImage">
+                        <h2 class="display-3">{{this.title}}</h2>
+                        <h3 class="display-4">Precio: ${{this.price}}</h3>
+                    </li>
+                </div>
+                {{/each}}
+            </div>
+    </div>
 </div>
