--- a/entrega_final/public/styles/styles.css
+++ b/entrega_final/public/styles/styles.css
@@ -1,10 +1,31 @@
 body{
-    margin-left: 20px;
+    margin: 20px;
+}
+
+#ecommerceHeader{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    padding-bottom: 15px;
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.1);
+}
+
+#carritoIcon{
+    cursor: pointer;
 }
 
 .productImage{
+    max-height: 280px;
     height: auto;
-    max-width: 300px;
+    max-width: 270px;
+}
+
+#liCard{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
 }
 
 #addProductsForm{
@@ -39,5 +60,11 @@ li{
 .card{
     margin: 20px;
     padding: 5px;
-    max-width: 350px;
+    max-width: 300px;
+}
+
+#products-list-wrapper{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); 
+    gap: 20px;
 }
