--- a/entrega_final/src/views/index.handlebars
+++ b/entrega_final/src/views/index.handlebars
@@ -1,14 +1,20 @@
 <div>
-    <h1 class="display-1">Lista de productos</h1>
+    <header id="ecommerceHeader">
+        <h1 class="display-1">Apple Prods</h1>
+        <img src="/images/ShoppingCartRounded.png" alt="imagen carrito" id="carritoIcon">
+    </header>
 
     <div id="productsCardsContainer">
             <div id="products-list-wrapper">
                 {{#each products}}
                 <div class="card">
-                    <li>
+                    <li id="liCard">
                         <img src={{this.thumbnails}} alt="imagen producto" class="productImage">
-                        <h2 class="display-3">{{this.title}}</h2>
-                        <h3 class="display-4">Precio: ${{this.price}}</h3>
+                        <div id="productsTexts">  
+                            <h2 class="display-3">{{this.title}}</h2>
+                            <h3 class="display-4">${{this.price}}</h3>
+                            <button type="button" class="btn btn-primary">Description</button>
+                        </div>
                     </li>
                 </div>
                 {{/each}}
