--- a/entrega_final/public/styles/styles.css
+++ b/entrega_final/public/styles/styles.css
@@ -11,6 +11,10 @@ body{
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.1);
 }
 
+#mainIcon{
+    cursor: pointer;
+}
+
 #carritoIcon{
     cursor: pointer;
 }
@@ -57,7 +61,7 @@ li{
     font-size: 20px;
 }
 
-.card{
+#indexCard{
     margin: 20px;
     padding: 5px;
     max-width: 300px;
@@ -67,4 +71,55 @@ li{
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     gap: 20px;
+}
+
+/* DESCRIPTION */
+#descriptionPage{
+    max-height: 100vh;
+    height: 100vh;
+}
+
+#cardContainer {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    min-height: 100vh; 
+    margin-top: -80px; 
+}
+
+#individualCardDescription{
+    display: flex;
+    flex-direction: row;
+    height: 500px;
+    width: 900px;
+}
+
+#descriptionImg{
+    height: auto;
+    width: 450px;
+    object-fit: contain;
+}
+
+#productInfo{
+    margin: 40px 0px 40px 0px;
+    width: 450px;
+}
+
+#productInfo h1{
+    font-weight: bolder;
+}
+
+#productInfo h3, #productInfo h4{
+    font-weight: lighter;
+}
+
+#addButton{
+    width: 100px;
+    height: 40px;
+    margin: 150px 0px 0px 280px;
+}
+
+a{
+   color: inherit;
+    text-decoration: none; 
 }
