--- a/entrega_final/src/views/index.handlebars
+++ b/entrega_final/src/views/index.handlebars
@@ -7,13 +7,15 @@
     <div id="productsCardsContainer">
             <div id="products-list-wrapper">
                 {{#each products}}
-                <div class="card">
+                <div class="card" id="indexCard">
                     <li id="liCard">
                         <img src={{this.thumbnails}} alt="imagen producto" class="productImage">
                         <div id="productsTexts">  
                             <h2 class="display-3">{{this.title}}</h2>
                             <h3 class="display-4">${{this.price}}</h3>
-                            <button type="button" class="btn btn-primary">Description</button>
+                            <a href="/product/{{this.id}}">
+                                <button type="button" class="btn btn-primary">Description</button>
+                            </a>
                         </div>
                     </li>
                 </div>
