--- a/entrega_final/src/views/index.handlebars
+++ b/entrega_final/src/views/index.handlebars
@@ -1,7 +1,17 @@
 <div>
     <header id="ecommerceHeader">
-        <h1 class="display-1">Apple Prods</h1>
-        <img src="/images/ShoppingCartRounded.png" alt="imagen carrito" id="carritoIcon">
+        <a href="/"><h1 class="display-1" id="mainIcon">Apple Prods</h1></a>
+        <div id="searchCartByCID">
+            <form id="searchForm" method="get" class="d-flex gap-2">
+            
+                <input  class="form-control" type="text" name="cid" id="cidInputHeader" placeholder="Search your cart with the id" required>
+                <button type="submit" class="btn btn-primary d-flex align-items-center">
+                    <img src="/images/ShoppingCartRounded.png" alt="imagen carrito" id="carritoIcon">
+                </button>
+                
+
+            </form>
+        </div>
     </header>
 
     <div id="productsCardsContainer">
@@ -22,4 +32,22 @@
                 {{/each}}
             </div>
     </div>
+
 </div>
+
+<script>
+    const searchForm = document.getElementById('searchForm');
+    const cidInput = document.getElementById('cidInputHeader');
+
+    searchForm.addEventListener('submit', (e) => {
+        e.preventDefault();
+        
+        const cartId = cidInput.value;
+        
+        if (cartId) {
+            window.location.href = `/carts/${cartId}`;
+        } else {
+            alert("Por favor, introduce un ID de carrito.");
+        }
+    });
+</script>
