feat: correccion de metodo GET en 'views.router.js' para optimizar la paginación

--- a/entrega_final/src/views/index.handlebars
+++ b/entrega_final/src/views/index.handlebars
@@ -33,6 +33,12 @@
             </div>
     </div>
 
+    <div id="paginationNav">
+        {{#each links}}
+        <a href={{this.link}}>{{this.text}}</a>
+        {{/each}}
+    </div>
+
 </div>
 
 <script>
