--- a/entrega_final/public/styles/styles.css
+++ b/entrega_final/public/styles/styles.css
@@ -162,3 +162,12 @@ a{
 #deleteAll{
     width: 200px;
 }
+
+/* paginacion */
+
+#paginationNav{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
+}
